# lazydiff

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  diff_1763140872.patch
.github/workflows/: ci.yml  publish.yml
docs/architecture/: 01-introduction-and-goals.md  02-constraints.md  03-context-and-scope.md  04-solution-strategy.md  05-building-blocks.md
src/: app.rs  browser.rs  diff.rs  main.rs  ui.rs
tests/: cli.rs
