[package]
name = "lazydiff"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/wmeints/lazydiff" 
description = "A terminal based diff viewer"
readme = "README.md"
license = "MIT"

[dependencies]
arboard = "3.4.1"
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
similar = "2.7.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
